--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,16 +1,138 @@
-        @charset "utf-8";
-        @font-face {/*set a new font*/
-			font-family: iron;
-			src: url(../fonts/Iron.ttf);
-			font-style: normal;
-			font-weight: normal;
-		}
-		@font-face {
-			font-family: matematica;
-			src: url(../fonts/6-Matematica-Regular.otf);
-			font-style: normal;
-			font-weight: normal;
-		}
+@charset "utf-8";
+@font-face {/*set a new font*/
+	font-family: iron;
+	src: url(../fonts/Iron.ttf);
+	font-style: normal;
+	font-weight: normal;
+}
+@font-face {
+	font-family: matematica;
+	src: url(../fonts/6-Matematica-Regular.otf);
+	font-style: normal;
+	font-weight: normal;
+}
+/*social*/
+@font-face {
+	font-family: 'si';
+	src: url('../fonts/socicon-v1.3/socicon-1.3/socicon.eot');
+	src: url('../fonts/socicon-v1.3/socicon-1.3/socicon.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/socicon-v1.3/socicon-1.3/socicon.woff') format('woff'),
+	url('../fonts/socicon-v1.3/socicon-1.3/socicon.ttf') format('truetype'),
+	url('../fonts/socicon-v1.3/socicon-1.3/socicon.svg#icomoonregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	@font-face {
+		font-family:si;
+		src: url(../fonts/socicon-v1.3/socicon-1.3/socicon.svg) format(svg);
+	}
+}
+
+.soc {
+
+	overflow:hidden;
+	margin-bottom: 0; padding:0;
+	list-style:none;
+}
+
+.soc li {
+	display:inline-block;
+	*display:inline;
+	zoom:1;
+}
+
+.soc li a {
+	top:10px;
+	font-family:si!important;
+	font-style:normal;
+	font-weight:400;
+	-webkit-font-smoothing:antialiased;
+	-moz-osx-font-smoothing:grayscale;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-ms-box-sizing:border-box;
+	-o-box-sizing:border-box;
+	box-sizing:border-box;
+
+	-o-transition:.1s;
+	-ms-transition:.1s;
+	-moz-transition:.1s;
+	-webkit-transition:.1s;
+	transition:.1s;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+
+	overflow:hidden;
+	text-decoration:none;
+	text-align:center;
+	display:block;
+	position: relative;
+	z-index: 1;
+	width: 51px;
+	height: 51px;
+	line-height: 51px;
+	font-size: 28px;
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+	border-radius: 100px;
+	margin-right: 50px;
+	color: #ffffff;
+	background-color: none;
+}
+
+.soc a:hover {
+	z-index: 2;
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.soc-icon-last{
+	margin:0 !important;
+}
+
+.soc-linkedin {
+	background-color: #3371b7;
+}
+.soc-linkedin:before {
+	content:'j';
+}
+.soc-github {
+	background-color: #5380c0;
+}
+.soc-github:before {
+	content:'Q';
+}
+.soc-facebook {
+	background-color: #3e5b98;
+}
+.soc-facebook:before {
+	content:'b';
+}
+.soc-google {
+	background-color: #d93e2d;
+}
+.soc-google:before {
+	content:'c';
+}
+.soc-twitter {
+	background-color: #4da7de;
+}
+.soc-twitter:before {
+	content:'a';
+}
+.soc-pinterest {
+	background-color: #c92619;
+}
+.soc-pinterest:before {
+	content:'d';
+}
+/****************************/
+
 		//a simple animation for text
 		@-webkit-keyframes textColorChangeBlackToWhite {
 		 10% {
